test/bad/blit0.pacc
/*
nopacc 5:11 'expected NameStart:c:0'
*/

S ← "foo":X*

X <- "foo"
